# franka_effort_controllers

./: CMakeLists.txt  README.md  package.xml  panda_mpc_controller_plugin.xml  panda_torque_controller_plugins.xml
config/: panda_mpc.yaml
include/panda_mpc/: hermite_spline.h  panda_mpc_torque_controller.h  panda_mpc_torque_controller_OBSOLETE.h  panda_torque_controller.h  panda_torque_pd_controller.h  panda_torque_pd_controller_simpson.h  panda_torque_pd_controller_simpson_new1.h  quadratic_spline.h
launch/: panda_launch.launch
src/: .panda_torque_pd_controller.cc.swp  panda_mpc_torque_controller.cc  panda_mpc_torque_controller_OBSOLETE.cc  panda_torque_controller.cc  panda_torque_pd_controller.cc  panda_torque_pd_controller_simpson.cc  panda_torque_pd_controller_simpson_new1.cc
